deploy: M0.9 Docker image, reference compose, cold-boot CI gate
- sbt-native-packager Docker image on eclipse-temurin:25-jre with the JDK 25
  RSS flags baked in (G1 + compact object headers + MaxRAMPercentage).
- deploy/compose/docker-compose.yml: firemoot + postgres:17, postgres
  healthcheck gating app start. Also the stack downstream CI will run.
- CI boot job builds the image, brings the stack up, and fails if cold start to
  /healthz is >=15s (SPEC §12). Locally healthy in ~4s.